kuber/2.3/src/01-dpl-multinginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-tool-deployment
  labels:
    app: nginx-tool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-tool
  template:
    metadata:
      labels:
        app: nginx-tool
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
          volumeMounts:
            - name: index-conf
              subPath: lorem
              mountPath: /usr/share/nginx/html/index.html
        - name: multitool
          image: wbitt/network-multitool
          ports:
            - containerPort: 1180
      volumes:
        - name: index-conf
          configMap:
            name: my-cm
