kuber/2.3/src/02-https-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dpl
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
          volumeMounts:
            - name: content-vol
              subPath: index-html
              mountPath: /usr/share/nginx/html/index.html
      volumes:
        - name: content-vol
          configMap:
            name: content-cm
