kuber/2.3/src/01-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lorem-svc
spec:
  ports:
    - name: nginx
      port: 80
      protocol: TCP
  selector:
    app: nginx-tool
