kuber/2.3/src/02-ingress-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-srv
spec:
  selector:
    app: nginx
  ports:
    - name: nginx-https
      port: 443
      protocol: TCP
    - name: nginx-http
      port: 80
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - microk8s.local
      secretName: nginx-tls
  rules:
    - host: microk8s.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nginx-srv
                port:
                  name: nginx-http
